--- a/Tugas1Smoothing/Tugas1PrakMpdw.Rmd
+++ b/Tugas1Smoothing/Tugas1PrakMpdw.Rmd
@@ -1,1 +1,914 @@
+---
+title: "Tugas Praktikum 1 - Smoothing (Microsoft Monthly Stock Price, 2013-2023)"
+author: "Muhammad Luthfi Al Gifari"
+date: "2023-09-03"
+output: html_document
+---
 
+```{r}
+library("forecast")
+library("graphics")
+library("TTR")
+library("TSA")
+```
+
+# Import Data
+```{r}
+library(rio)
+Micros <- import("https://raw.githubusercontent.com/Mluthfialgifari/Praktikum-MPDW-Sems5/main/microsoft-stock-dataset-Monthly2.csv")
+Micros
+View(Micros)
+Micros <- as.data.frame(Micros)
+Micros
+```
+
+# Eksplorasi Data
+```{r}
+str(Micros)
+dim(Micros)
+```
+
+# Scanning Data Deret Waktu
+```{r}
+Micros1.ts <- as.data.frame(ts(Micros$Price))
+Micros1.ts
+```
+
+# Ringkasan Data
+```{r}
+summary(Micros1.ts)
+```
+
+# Plot Data Deret Waktu
+```{r}
+ts.plot(Micros1.ts, xlab = "Time Period", ylab = "Microsoft Stock Price",
+        main = "Time Series Plot")
+points(Micros1.ts)
+```
+
+# Perbandingan Data Latih (80%) dan Data Uji (20%)
+```{r}
+# Pembagian Data Latih dan Data Uji
+training_ma <- Micros[1:96,2]
+training_ma 
+testing_ma <- Micros[97:120,2]
+testing_ma 
+
+train_ma.ts <- ts(training_ma)
+train_ma.ts
+test_ma.ts <- ts(testing_ma)
+test_ma.ts
+```
+# Eksplorasi Data (Data Latih & Data Uji)
+```{r}
+# Eksplorasi Keseluruhan Data
+plot(Micros1.ts, col = "red", main = "Plot Semua Data")
+points(Micros1.ts)
+dev.copy(png, "Plot Keseluruhan Data.png")
+dev.off()
+
+# Eksplorasi Data Latih
+plot(train_ma.ts, col = "blue", main = "Plot Data Latih")
+points(train_ma.ts)
+dev.copy(png, "Plot Data Latih.png")
+dev.off()
+
+# Eksplorasi Data Uji
+plot(test_ma.ts, col = "blue", main = "Plot Data Uji")
+points(test_ma.ts)
+dev.copy(png, "Plot Data Uji.png")
+dev.off()
+```
+
+# Eksplorasi Data (GGPLOT2)
+```{r}
+library(ggplot2)
+ggplot() + 
+  geom_line(data = training_ma, aes(x = 'Time Period Monthly', y = Price, col = "Data Latih")) +
+  geom_line(data = testing_ma, aes(x = 'Time Period Monthly', y = Price, col = "Data Uji")) +
+  labs(x = "Periode Waktu", y = "Price", color = "Legend") +
+  scale_colour_manual(name="Keterangan:", breaks = c("Data Latih", "Data Uji"),
+                      values = c("blue", "red")) + 
+  theme_bw() + theme(legend.position = "bottom",
+                     plot.caption = element_text(hjust=0.5, size=12))
+```
+
+## Single Moving Average ##
+```{r}
+# SMA dengan parameter 'm = 4'
+data.sma <- SMA(train_ma.ts, n = 4)
+data.sma
+```
+
+Data pemulusan pada periode ke-t selanjutnya digunakan sebagai nilai peramalan pada periode ke t+1 sehingga hasil peramalan 1 periode kedepan adalah sebagai berikut:
+```{r}
+data.ramal1 <- c(NA, data.sma)
+data.ramal1 # Peramalan 1 periode ke depan
+```
+
+Selanjutnya akan dilakukan peramalan sejumlah data uji yaitu 24 periode. Pada metode SMA, hasil peramalan 24 periode ke depan akan bernilai sama dengan hasil peramalan 1 periode kedepan. Dalam hal ini akan dilakukan pengguabungan data aktual train, data hasil pemulusan dan data hasil ramalan 24 periode kedepan.
+```{r}
+data.gab1 <- cbind(aktual = c(train_ma.ts, rep(NA, 24)), pemulusan = c(data.sma, rep(NA, 24)), ramalan = c(data.ramal1, rep(data.ramal1[length(data.ramal1)], 23)))
+data.gab1 # Peramalan 24 periode ke depan
+```
+
+# Plot Deret Waktu (Hasil Peramalan)
+```{r}
+ts.plot(Micros1.ts, xlab = "Time Period", ylab = "Price", main = "SMA N = 4 Data Price")
+points(Micros1.ts)
+lines(data.gab1[,2], col = "green", lwd = 2)
+lines(data.gab1[,3], col = "red", lwd = 2)
+legend("topleft", c("Data Actual", "Data Smoothing", "Data Forecasting"), lty = 8, col = c("black", "green", "red"), cex = 0.5)
+```
+
+# Ukuran Akurasi (Metode SSE, MSE, MAPE) Data Latih & Data Uji
+```{r}
+# Menghitung Nilai Keakuratan Data Latih
+error_train.sma = train_ma.ts-data.ramal1[1:length(train_ma.ts)]
+error_train.sma
+SSE_train.sma = sum(error_train.sma[5:length(train_ma.ts)]^2)
+SSE_train.sma
+MSE_train.sma = mean(error_train.sma[5:length(train_ma.ts)]^2)
+MSE_train.sma
+MAPE_train.sma = mean(abs((error_train.sma[5:length(train_ma.ts)]/train_ma.ts[5:length(train_ma.ts)])*100))
+MAPE_train.sma
+akurasi_train.sma <- matrix(c(SSE_train.sma, MSE_train.sma, MAPE_train.sma))
+akurasi_train.sma
+row.names(akurasi_train.sma) <- c("SSE", "MSE", "MAPE")
+row.names(akurasi_train.sma)
+colnames(akurasi_train.sma) <- c("Akurasi m = 4")
+colnames(akurasi_train.sma)
+akurasi_train.sma
+```
+
+Dalam hal ini nilai MAPE "Data Latih" pada metode SMA kurang dari 2%, nilai ini dapat dikategorikan sebagai nilai akurasi yang sangat baik. Selanjutnya dilakukan perhitungan nilai MAPE data uji pada metde pemulusan SMA.
+```{r}
+# Menghitung Nilai Keakuratan Data Uji
+error_test.sma = test_ma.ts-data.gab1[97:120,3]
+error_test.sma
+SSE_test.sma = sum(error_test.sma^2)
+SSE_test.sma
+MSE_test.sma = mean(error_test.sma^2)
+MSE_test.sma
+MAPE_test.sma = mean(abs((error_test.sma/test_ma.ts*100)))
+MAPE_test.sma
+akurasi_test.sma <- matrix(c(SSE_test.sma, MSE_test.sma, MAPE_test.sma))
+akurasi_test.sma
+row.names(akurasi_test.sma) <- c("SSE", "MSE", "MAPE")
+row.names(akurasi_test.sma) 
+colnames(akurasi_test.sma) <- c("Akurasi m = 4")
+colnames(akurasi_test.sma)
+akurasi_test.sma
+```
+Perhitungan akurasi menggunakan data latih menghasilkan nilai MAPE yang kurang dari 10%, sehingga nilai akurasi ini dapat dikategorikan sebagai SANGAT BAIK.
+
+## Double Moving Average ##
+- Pola Data Trend
+- Proses pemulusan dengan rata-rata dilakukan sebanyak 2 kali
+```{r}
+dma <- SMA(data.sma, n = 4)
+dma
+At <- 2*data.sma - dma
+At
+Bt <- 2/(4-1)*(data.sma - dma)
+Bt
+data.dma <- At + Bt
+data.dma
+data.ramal2 <- c(NA, data.dma)
+data.ramal2
+t = 1:24
+t
+f = c()
+f
+
+for (i in t) {
+  f[i] = At[length(At)] + Bt[length(Bt)]*(i)
+}
+
+data.gab2 <- cbind(aktual = c(train_ma.ts, rep(NA, 24)), smoothing1 = c(data.sma, rep(NA, 24)), smoothing2 = c(data.dma, rep(NA, 24)), At = c(At, rep(NA, 24)), Bt = c(Bt, rep(NA, 24)), ramalan = c(data.ramal2, f[-1]))
+data.gab2
+```
+
+Hasil pemulusan menggunakan metode DMA divisualisasikan sebagai berikut:
+```{r}
+ts.plot(Micros1.ts, xlab = "Time Period ", ylab = "Price", main = "DMA N = 4 Data Price")
+points(Micros1.ts)
+lines(data.gab2[,3], col = "green", lwd = 2)
+lines(data.gab2[,6], col = "red", lwd = 2)
+legend("topleft", c("Data Actual", "Data Smoothing", "Data Forecasting"), lty = 8, col = c("black","green","red"), cex = 0.8)
+```
+
+Selanjutnya perhitungan akurasi dilakukan baik pada "Data Latih" maupun "Data Uji". Perhitungan akurasi dilakukan dengan ukuran akurasi SSE, MSE dan MAPE.
+```{r}
+# Menghitung Nilai Keakuratan Data Latih
+error_train.dma = train_ma.ts-data.ramal2[1:length(train_ma.ts)]
+error_train.dma
+SSE_train.dma = sum(error_train.dma[8:length(train_ma.ts)]^2)
+SSE_train.dma
+MSE_train.dma = mean(error_train.dma[8:length(train_ma.ts)]^2)
+MSE_train.dma
+MAPE_train.dma = mean(abs((error_train.dma[8:length(train_ma.ts)]/train_ma.ts[8:length(train_ma.ts)])*100))
+MAPE_train.dma
+akurasi_train.dma <- matrix(c(SSE_train.dma, MSE_train.dma, MAPE_train.dma))
+akurasi_train.dma
+row.names(akurasi_train.dma) <- c("SSE", "MSE", "MAPE")
+row.names(akurasi_train.dma)
+colnames(akurasi_train.dma) <- c("Akurasi m = 4")
+colnames(akurasi_train.dma)
+akurasi_train.dma
+```
+
+Perhitungan akurasi pada "Data Latih" menggunakan nilai MAPE menghasilkan nilai MAPE yang kurang dari 10%, sehingga dikategorikan sangat baik. Selanjutnya, perhitungan nilai akurasi dilakukan pada data uji.
+```{r}
+# Menghitung Nilai Keakuratan Data Uji
+error_test.dma = test_ma.ts-data.gab2[97:120,6]
+error_test.dma 
+SSE_test.dma = sum(error_test.dma^2)
+SSE_test.dma
+MSE_test.dma = mean(error_test.dma^2)
+MSE_test.dma
+MAPE_test.dma = mean(abs((error_test.dma/test_ma.ts*100)))
+MAPE_test.dma
+akurasi_test.dma <- matrix(c(SSE_test.dma, MSE_test.dma, MAPE_test.dma))
+akurasi_test.dma
+row.names(akurasi_test.dma) <- c("SSE", "MSE", "MAPE")
+row.names(akurasi_test.dma)
+colnames(akurasi_test.dma) <- c("Akurasi m = 4")
+colnames(akurasi_test.dma)
+akurasi_test.dma
+```
+Perhitungan akurasi menggunakan "Data Latih" menghasilkan nilai MAPE yang kurang dari 10%, sehingga nilai akurasi ini dapat dikategorikan sebagai SANGAT BAIK.
+
+^Pada "Data Latih", metode SMA lebih baik dibandingkan dengan metode DMA, sedangkan pada "Data Uji", metode DMA lebih baik dibandingkan SMA
+
+## Single Exponential Smoothing (SES) & Double Exponential Smoothing (DES) ##
+- Metode pemulusan dengan melakukan pembobotan menurun secara eksponensial.
+- Nilai yang lebih baru diberi bobot yang lebih besar dari nilai terdahulu.
+- Terdapat satu atau lebih parameter pemulusan yang ditentukan secara eksplisit, dan hasil pemilihan parameter tersebut akan menentukan bobot yang akan diberikan pada nilai pengamatan. 
+- Ada dua macam model, yaitu model tunggal dan ganda.
+
+# Pembagian Data
+Pembagian "Data Latih" dan "Data Uji" dilakukan dengan perbandingan 80% "Data Latih" dan 20% "Data Uji".
+```{r}
+# Membagi Training dan Testing
+training <- Micros[1:96,]
+training
+testing <- Micros[97:120,]
+testing
+train.ts <- ts(training$Price)
+train.ts
+test.ts <- ts(testing$Price)
+test.ts
+```
+
+# Eksplorasi Data
+Eksplorasi dilakukan dengan membuat "Plot Data Deret Waktu" untuk keseluruhan data, yakni "Data Latih" dan "Data Uji".
+```{r}
+# Eksplorasi Data
+plot(Micros1.ts, col = "black", main = "Plot Semua Data")
+points(Micros1.ts)
+
+plot(train.ts, col = "red", main = "Plot Data Latih")
+points(train.ts)
+
+plot(test.ts, col = "blue", main = "Plot Data Uji")
+points(test.ts)
+```
+
+Eksplorasi data juga dapat dilakukan menggunakan package `GGPLOT2`.
+```{r}
+# Eksplorasi dengan GGPLOT
+library(ggplot2)
+ggplot() + 
+  geom_line(data = training, aes(x = Periode, y = Price, col = "Data Latih")) +
+  geom_line(data = testing, aes(x = Periode, y = Price, col = "Data Uji")) +
+  labs(x = "Periode Waktu", y = "Price", color = "Legend") +
+  scale_colour_manual(name="Keterangan:", breaks = c("Data Latih", "Data Uji"),
+                      values = c("blue", "red")) + 
+  theme_bw() + theme(legend.position = "bottom",
+                     plot.caption = element_text(hjust = 0.5, size = 12))
+```
+
+## Single Exponential Smoothing (SES) ##
+Pemulusan dengan metode SES dapat dilakukan dengan dua fungsi dari *packages* berbeda, yaitu:
+(1) fungsi `ses()` dari *packages* `forecast`
+(2) fungsi `HoltWinters` dari *packages* `stats` 
+
+```{r}
+# Cara 1 (Fungsi SES)
+ses.1 <- ses(train.ts, h = 24, alpha = 0.2)
+plot(ses.1)
+ses.1
+
+ses.2 <- ses(train.ts, h = 24, alpha = 0.7)
+plot(ses.2)
+ses.2
+```
+
+Untuk mendapatkan gambar hasil pemulusan pada "Data Latih" dengan fungsi `ses()` , perlu digunakan fungsi `autoplot()` dan `autolayer()` dari *library packages* `GGPLOT2` .
+```{r}
+library(ggplot2)
+autoplot(ses.1) +
+  autolayer(fitted(ses.1), series = "Fitted") + ylab("Price") + xlab("Period") + theme_classic()
+```
+
+Pada fungsi `ses()` , terdapat beberapa argumen yang umum digunakan, yaitu nilai `y` , `gamma` , `beta` , `alpha` , dan `h` .
+
+Nilai `y` adalah nilai data deret waktu, `gamma` adalah parameter pemulusan untuk komponen musiman, `beta` adalah parameter pemulusan untuk tren, dan `alpha` adalah parameter pemulusan untuk stasioner, serta `h` adalah banyaknya periode yang akan diramalkan.
+
+Kasus di atas merupakan contoh inisialisasi nilai parameter $\lambda$ dengan nilai `alpha` 0,2 dan 0,7 dan banyak periode data yang akan diramalkan adalah sebanyak 10 periode. Selanjutnya akan digunakan fungsi `HoltWinters()` dengan nilai inisialisasi parameter dan panjang periode peramalan yang sama dengan fungsi `ses()` .
+
+```{r}
+# Cara 2 (Fungsi Holtwinter)
+ses1 <- HoltWinters(train.ts, gamma = FALSE, beta = FALSE, alpha = 0.2)
+plot(ses1)
+```
+
+# Peramalan 1
+```{r}
+ramalan1 <- forecast(ses1, h = 24)
+ramalan1
+
+ses2 <- HoltWinters(train.ts, gamma = FALSE, beta = FALSE, alpha = 0.7)
+plot(ses2)
+```
+
+# Peramalan 2
+```{r}
+ramalan2 <- forecast(ses2, h = 24)
+ramalan2
+```
+
+Fungsi `HoltWinters` memiliki argumen yang sama dengan fungsi `ses()` . Argumen-argumen kedua fungsi dapat dilihat lebih lanjut dengan `?ses()` atau `?HoltWinters` .
+
+Nilai parameter $\alpha$ dari kedua fungsi dapat dioptimalkan menyesuaikan dari *error*-nya paling minimumnya. Caranya adalah dengan membuat parameter $\alpha =$ `NULL` .
+
+```{r}
+# SES
+ses.opt <- ses(train.ts, h = 24, alpha = NULL)
+plot(ses.opt)
+ses.opt
+```
+
+```{r}
+# Lambda Optimum Holt Winter
+sesopt <- HoltWinters(train.ts, gamma = FALSE, beta = FALSE, alpha = NULL)
+sesopt
+plot(sesopt)
+```
+
+# Peramalan Optimum
+```{r}
+ramalanopt <- forecast(sesopt, h = 24)
+ramalanopt
+```
+Setelah dilakukan peramalan, akan dilakukan perhitungan keakuratan hasil peramalan. Perhitungan akurasi ini dilakukan baik pada "Data Latih" dan "Data Uji".
+
+## Akurasi Data Latih ##
+Perhitungan akurasi data dapat dilakukan dengan cara langsung maupun manual. Secara langsung, nilai akurasi dapat diambil dari objek yang tersimpan pada hasil SES, yaitu *sum of squared errors* (SSE). Nilai akurasi lain dapat dihitung pula dari nilai SSE tersebut.
+
+# Keakuratan Metode
+```{r}
+# Pada Data Latih
+SSE1 <- ses1$SSE
+SSE1
+MSE1 <- ses1$SSE/length(train.ts)
+MSE1
+RMSE1 <- sqrt(MSE1)
+RMSE1
+
+akurasi1 <- matrix(c(SSE1, MSE1, RMSE1))
+akurasi1
+row.names(akurasi1) <- c("SSE", "MSE", "RMSE")
+row.names(akurasi1)
+colnames(akurasi1) <- c("Akurasi lambda = 0.2")
+colnames(akurasi1)
+akurasi1
+
+SSE2 <- ses2$SSE
+SSE2
+MSE2 <- ses2$SSE/length(train.ts)
+MSE2
+RMSE2 <- sqrt(MSE2)
+RMSE2
+
+akurasi2 <- matrix(c(SSE2, MSE2, RMSE2))
+akurasi2
+row.names(akurasi2) <- c("SSE", "MSE", "RMSE")
+row.names(akurasi2)
+colnames(akurasi2) <- c("Akurasi lambda = 0.7")
+colnames(akurasi2)
+akurasi2
+```
+# Cara Manual 1
+```{r}
+fitted1 <- ramalan1$fitted
+fitted1
+sisaan1 <- ramalan1$residuals
+sisaan1
+head(sisaan1)
+
+resid1 <- training$Price-ramalan1$fitted
+resid1
+head(resid1)
+```
+
+# Cara Manual 2
+```{r}
+SSE.1 = sum(sisaan1[2:length(train.ts)]^2)
+SSE.1
+
+MSE.1 = SSE.1/length(train.ts)
+MSE.1
+
+MAPE.1 = sum(abs(sisaan1[2:length(train.ts)]/train.ts[2:length(train.ts)])*
+               100)/length(train.ts)
+MAPE.1
+
+akurasi.1 <- matrix(c(SSE.1, MSE.1, MAPE.1))
+akurasi.1
+row.names(akurasi.1) <- c("SSE", "MSE", "MAPE")
+row.names(akurasi.1)
+colnames(akurasi.1) <- c("Akurasi lambda = 0.2")
+colnames(akurasi.1)
+akurasi.1
+
+fitted2 <- ramalan2$fitted
+fitted2
+sisaan2 <- ramalan2$residuals
+sisaan2
+head(sisaan2)
+
+resid2 <- training$Price-ramalan2$fitted
+resid2
+head(resid2)
+
+SSE.2 = sum(sisaan2[2:length(train.ts)]^2)
+SSE.2
+
+MSE.2 = SSE.2/length(train.ts)
+MSE.2
+
+MAPE.2 = sum(abs(sisaan2[2:length(train.ts)]/train.ts[2:length(train.ts)])*
+               100)/length(train.ts)
+MAPE.2
+
+akurasi.2 <- matrix(c(SSE.2, MSE.2, MAPE.2))
+akurasi.2
+row.names(akurasi.2) <- c("SSE", "MSE", "MAPE")
+row.names(akurasi.2)
+colnames(akurasi.2) <- c("Akurasi lambda = 0.7")
+colnames(akurasi.2)
+akurasi.2
+```
+
+Berdasarkan nilai SSE, MSE, RMSE, dan MAPE di antara kedua parameter, nilai parameter $\lambda=0,2$ menghasilkan akurasi yang lebih baik dibanding $\lambda=0,7$ . Hal ini dilihat dari nilai masing-masing ukuran akurasi yang lebih kecil. Berdasarkan nilai MAPE-nya, hasil ini dapat dikategorikan sebagai peramalan sangat baik.
+
+# Akurasi Data Uji
+Akurasi data uji dapat dihitung dengan cara yang hampir sama dengan perhitungan akurasi data latih.
+
+```{r}
+selisih1 <- ramalan1$mean-testing$Price
+selisih1
+SSEtesting1 <- sum(selisih1^2)
+SSEtesting1
+MSEtesting1 <- SSEtesting1/length(testing)
+MSEtesting1
+
+selisih2 <- ramalan2$mean-testing$Price
+selisih2
+SSEtesting2 <- sum(selisih2^2)
+SSEtesting2
+MSEtesting2 <- SSEtesting2/length(testing)
+MSEtesting2
+
+selisihopt <- ramalanopt$mean-testing$Price
+selisihopt
+SSEtestingopt <- sum(selisihopt^2)
+SSEtestingopt
+MSEtestingopt <- SSEtestingopt/length(testing)
+MSEtestingopt
+
+akurasitesting1 <- matrix(c(SSEtesting1, SSEtesting2, SSEtestingopt))
+akurasitesting1
+row.names(akurasitesting1) <- c("SSE1", "SSE2", "SSEopt")
+row.names(akurasitesting1)
+akurasitesting1
+
+akurasitesting2 <- matrix(c(MSEtesting1, MSEtesting2, MSEtestingopt))
+akurasitesting2
+row.names(akurasitesting2) <- c("MSE1", "MSE2", "MSEopt")
+row.names(akurasitesting2)
+akurasitesting2
+```
+Selain dengan cara di atas, perhitungan nilai akurasi dapat menggunakan fungsi `accuracy()` dari *package* `forecast` . Penggunaannya yaitu dengan menuliskan `accuracy(hasil ramalan, kondisi aktual)` . Contohnya adalah sebagai berikut:
+
+```{r}
+# Cara Lain
+accuracy(ramalanopt, testing$Price)
+```
+## Double Exponential Smoothing (DES) ##
+Metode pemulusan *Double Exponential Smoothing* (DES) digunakan untuk data yang memiliki pola tren. Metode DES adalah metode semacam SES, hanya saja dilakukan dua kali, yaitu pertama untuk tahapan 'level' dan kedua untuk tahapan 'tren'. Pemulusan menggunakan metode ini akan menghasilkan peramalan tidak konstan untuk periode berikutnya.
+
+Pemulusan dengan metode DES kali ini akan menggunakan fungsi `HoltWinters()` . Jika sebelumnya nilai argumen `beta` dibuat `FALSE` , kali ini argumen tersebut akan diinisialisasi bersamaan dengan nilai `alpha` .
+
+# Contoh Ramalan 1
+```{r}
+# Lambda = 0.2 dan gamma = 0.2
+des.1 <- HoltWinters(train.ts, gamma = FALSE, beta = 0.2, alpha = 0.2)
+des.1
+plot(des.1)
+
+# Ramalan
+ramalandes1 <- forecast(des.1, h = 24)
+ramalandes1
+```
+
+# Contoh Ramalan 2
+```{r}
+# Lambda = 0.6 dan gamma = 0.3
+des.2 <- HoltWinters(train.ts, gamma = FALSE, beta = 0.3, alpha = 0.6)
+des.2
+plot(des.2)
+
+# Ramalan
+ramalandes2 <- forecast(des.2, h = 24)
+ramalandes2
+```
+
+Selanjutnya jika ingin membandingkan "Plot Data Latih dan Data Uji" adalah sebagai berikut:
+```{r}
+# Visually Evaluate the Prediction
+plot(Micros1.ts)
+lines(des.1$fitted[,1], lty = 2, col = "blue")
+lines(ramalandes1$mean, col = "red")
+```
+
+Untuk mendapatkan nilai parameter optimum dari DES, argumen `alpha` dan `beta` dapat dibuat `NULL` seperti berikut:
+```{r}
+# Lambda dan gamma optimum
+des.opt <- HoltWinters(train.ts, gamma = FALSE)
+des.opt
+plot(des.opt)
+
+# Ramalan
+ramalandesopt <- forecast(des.opt, h = 24)
+ramalandesopt
+```
+Selanjutnya akan dilakukan perhitungan akurasi pada data latih maupun data uji dengan ukuran akurasi SSE, MSE dan MAPE.
+
+# Akurasi Data Latih
+```{r}
+# Akurasi Data Training
+ssedes.train1 <- des.1$SSE
+ssedes.train1
+msedes.train1 <- ssedes.train1/length(train.ts)
+msedes.train1
+sisaandes1 <- ramalandes1$residuals
+sisaandes1
+head(sisaandes1)
+
+mapedes.train1 <- sum(abs(sisaandes1[3:length(train.ts)]/train.ts[3:length(train.ts)])
+                      *100)/length(train.ts)
+mapedes.train1
+
+akurasides.1 <- matrix(c(ssedes.train1, msedes.train1, mapedes.train1))
+akurasides.1
+row.names(akurasides.1) <- c("SSE", "MSE", "MAPE")
+row.names(akurasides.1)
+colnames(akurasides.1) <- c("Akurasi lamda = 0.2 dan gamma = 0.2")
+colnames(akurasides.1)
+akurasides.1
+
+ssedes.train2 <- des.2$SSE
+ssedes.train2
+msedes.train2 <- ssedes.train2/length(train.ts)
+msedes.train2
+sisaandes2 <- ramalandes2$residuals
+sisaandes2
+head(sisaandes2)
+
+mapedes.train2 <- sum(abs(sisaandes2[3:length(train.ts)]/train.ts[3:length(train.ts)])
+                      *100)/length(train.ts)
+mapedes.train2
+
+akurasides.2 <- matrix(c(ssedes.train2, msedes.train2, mapedes.train2))
+akurasides.2
+row.names(akurasides.2) <- c("SSE", "MSE", "MAPE")
+row.names(akurasides.2)
+colnames(akurasides.2) <- c("Akurasi lambda = 0.6 dan gamma = 0.3")
+colnames(akurasides.2)
+akurasides.2
+```
+Interpretasi Hasil:
+= Diperoleh nilai 'MAPE' pada akurasi Data Latih sebesar 4,53 atau sekitar 4,5%, yang mana kurang dari 10% (Akurasi Sangat Baik).
+
+Hasil akurasi dari data latih didapatkan skenario 2 dengan lambda=0.6 dan gamma=0.3 memiliki hasil yang lebih baik. Namun untuk kedua skenario dapat dikategorikan peramalan sangat baik berdasarkan nilai MAPE-nya.
+
+# Akurasi Data Uji
+```{r}
+# Akurasi Data Testing
+selisihdes1 <- ramalandes1$mean-testing$Price
+selisihdes1
+
+SSEtestingdes1 <- sum(selisihdes1^2)
+SSEtestingdes1
+MSEtestingdes1 <- SSEtestingdes1/length(testing$Price)
+MSEtestingdes1
+MAPEtestingdes1 <- sum(abs(selisihdes1/testing$Price)*100)/length(testing$Price)
+MAPEtestingdes1
+
+selisihdes2 <- ramalandes2$mean-testing$Price
+selisihdes2
+
+SSEtestingdes2 <- sum(selisihdes2^2)
+SSEtestingdes2
+MSEtestingdes2 <- SSEtestingdes2/length(testing$Price)
+MSEtestingdes2
+MAPEtestingdes2 <- sum(abs(selisihdes2/testing$Price)*100)/length(testing$Price)
+MAPEtestingdes2
+
+selisihdesopt <- ramalandesopt$mean-testing$Price
+selisihdesopt
+
+SSEtestingdesopt <- sum(selisihdesopt^2)
+SSEtestingdesopt
+MSEtestingdesopt <- SSEtestingdesopt/length(testing$Price)
+MSEtestingdesopt
+MAPEtestingdesopt <- sum(abs(selisihdesopt/testing$Price)*100)/length(testing$Price)
+MAPEtestingdesopt
+
+akurasitestingdes <-
+  matrix(c(SSEtestingdes1, MSEtestingdes1, MAPEtestingdes1, SSEtestingdes2, MSEtestingdes2,
+           MAPEtestingdes2, SSEtestingdesopt, MSEtestingdesopt, MAPEtestingdesopt),
+         nrow = 3, ncol = 3)
+akurasitestingdes
+
+row.names(akurasitestingdes) <- c("SSE", "MSE", "MAPE")
+row.names(akurasitestingdes)
+colnames(akurasitestingdes) <- c("des ske1","des ske2","des opt")
+colnames(akurasitestingdes)
+akurasitestingdes
+```
+
+## Perbandingan SES dan DES ##
+```{r}
+MSEfull <-
+  matrix(c(MSEtesting1, MSEtesting2, MSEtestingopt, MSEtestingdes1, MSEtestingdes2,
+           MSEtestingdesopt), nrow = 3, ncol = 2)
+MSEfull
+row.names(MSEfull) <- c("ske 1", "ske 2", "ske opt")
+row.names(MSEfull)
+colnames(MSEfull) <- c("ses", "des")
+colnames(MSEfull)
+MSEfull
+```
+Kedua metode dapat dibandingkan dengan menggunakan ukuran akurasi yang sama. Contoh di atas adalah perbandingan kedua metode dengan ukuran akurasi MSE. Hasilnya didapatkan metode DES lebih baik dibandingkan metode SES dilihat dari MSE yang lebih kecil nilainya.
+
+# Pemulusan Data Musiman
+Pertama impor kembali data baru untuk latihan data musiman.
+```{r}
+# Import data
+library(rio)
+Micros2 <- import("https://raw.githubusercontent.com/Mluthfialgifari/Praktikum-MPDW-Sems5/main/microsoft-stock-dataset-Monthly2.csv")
+Micros2
+View(Micros2)
+
+Micros2.ts <- ts(Micros2$Price)
+Micros2.ts
+```
+
+Selanjutnya melakukan pembagian data dan mengubahnya menjadi data deret waktu.
+```{r}
+# Membagi data menjadi training dan testing
+training <- Micros2[1:96,2]
+training
+testing <- Micros2[97:120,2]
+testing
+training.ts <- ts(training, frequency = 12)
+training.ts
+testing.ts <- ts(testing, frequency = 12)
+testing.ts
+```
+
+Kemudian akan dilakukan eskplorasi dengan plot data deret waktu sebagai berikut.
+```{r}
+# Membuat Plot Deert Waktu
+plot(Micros2.ts, col = "red", main = "Plot Semua Data")
+points(Micros2.ts)
+
+plot(training.ts, col = "blue", main = "Plot Data Latih")
+points(training.ts)
+
+plot(testing.ts, col = "green", main = "Plot Data Uji")
+points(testing.ts)
+```
+
+Metode Holt-Winter untuk peramalan data musiman menggunakan tiga persamaan pemulusan yang terdiri atas persamaan untuk level $(L_t)$, trend $(B_t)$, dan komponen seasonal / musiman $(S_t)$ dengan parameter pemulusan berupa $\alpha$, $\beta$, dan $\gamma$. Metode Holt-Winter musiman terbagi menjadi dua, yaitu metode aditif dan metode multiplikatif. Perbedaan persamaan dan contoh datanya adalah sebagai berikut.
+
+![](images/Perbandingan%20model%20aditif.png){width="609"}
+
+![](images/example%20additive-multiplicative.png)
+
+Pemulusan data musiman dengan metode Winter dilakukan menggunakan fungsi `HoltWinters()` dengan memasukkan argumen tambahan, yaitu `gamma()` dan `seasonal()` . Arguman `seasonal()` diinisialisasi menyesuaikan jenis musiman, aditif atau multiplikatif.
+
+# Winter Aditif
+Perhitungan dengan model aditif dilakukan jika plot data asli menunjukkan fluktuasi musiman yang relatif stabil (konstan).
+
+# Pemulusan
+```{r}
+# Pemulusan dengan Winter Aditif 
+winter1 <- HoltWinters(training.ts, alpha = 0.2, beta = 0.1, gamma = 0.1, seasonal = "additive")
+winter1
+winter1$fitted
+xhat1 <- winter1$fitted[,2]
+xhat1
+
+winter1.opt <- HoltWinters(training.ts, alpha= NULL,  beta = NULL, gamma = NULL, seasonal = "additive")
+winter1.opt
+winter1.opt$fitted
+xhat1.opt <- winter1.opt$fitted[,2]
+xhat1.opt
+```
+
+# Peramalan
+```{r}
+# Forecasting
+forecast1 <- predict(winter1, n.ahead = 24)
+forecast1
+forecast1.opt <- predict(winter1.opt, n.ahead = 24)
+forecast1.opt
+```
+
+# Plot Deret Waktu
+```{r}
+plot(training.ts, main = "Winter 0.2; 0.1; 0.1", type = "l", col = "black",
+     xlim = c(1, 25), pch = 12)
+lines(xhat1, type = "l", col = "red")
+lines(xhat1.opt, type = "l", col = "blue")
+lines(forecast1, type = "l", col = "red")
+lines(forecast1.opt, type = "l", col = "blue")
+legend("topleft", c("Actual Data", expression(paste(Winter1)),
+                   expression(paste(Winter1.opt))), cex = 0.5,
+       col = c("black","red","blue"), lty = 1)
+```
+
+# Akurasi Data Latih
+```{r}
+# Akurasi Data Training
+SSE1 <- winter1$SSE
+SSE1
+MSE1 <- winter1$SSE/length(training.ts)
+MSE1
+RMSE1 <- sqrt(MSE1)
+RMSE1
+akurasi1 <- matrix(c(SSE1, MSE1, RMSE1))
+akurasi1
+row.names(akurasi1) <- c("SSE", "MSE", "RMSE")
+row.names(akurasi1)
+colnames(akurasi1) <- c("Akurasi")
+colnames(akurasi1)
+akurasi1
+
+SSE1.opt <- winter1.opt$SSE
+SSE1.opt
+MSE1.opt <- winter1.opt$SSE/length(training.ts)
+MSE1.opt
+RMSE1.opt <- sqrt(MSE1.opt)
+RMSE1.opt
+akurasi1.opt <- matrix(c(SSE1.opt, MSE1.opt, RMSE1.opt))
+akurasi1.opt
+row.names(akurasi1.opt) <- c("SSE1.opt", "MSE1.opt", "RMSE1.opt")
+row.names(akurasi1.opt)
+colnames(akurasi1.opt) <- c("Akurasi")
+colnames(akurasi1.opt)
+akurasi1.opt
+
+akurasi1.train = data.frame(Model_Winter = c("Winter 1", "Winter1 optimal"),
+                            Nilai_SSE = c(SSE1, SSE1.opt),
+                            Nilai_MSE = c(MSE1, MSE1.opt), Nilai_RMSE = c(RMSE1, RMSE1.opt))
+akurasi1.train
+```
+# Akurasi Data Uji
+```{r}
+# Akurasi Data Testing
+forecast1 <- data.frame(forecast1)
+forecast1
+testing.ts <- data.frame(testing.ts)
+testing.ts
+selisih1 <- forecast1-testing.ts
+selisih1
+SSEtesting1 <- sum(selisih1^2)
+SSEtesting1
+MSEtesting1 <- SSEtesting1/length(testing.ts)
+MSEtesting1
+forecast1.opt <- data.frame(forecast1.opt)
+forecast1.opt
+selisih1.opt <- forecast1.opt-testing.ts
+selisih1.opt
+SSEtesting1.opt <- sum(selisih1.opt^2)
+SSEtesting1.opt
+MSEtesting1.opt <- SSEtesting1.opt/length(testing.ts)
+MSEtesting1.opt
+```
+
+# Winter Multiplikatif
+Model multiplikatif digunakan cocok digunakan jika plot data asli menunjukkan fluktuasi musiman yang bervariasi.
+
+# Pemulusan
+```{r}
+# Pemulusan dengan Winter Multiplikatif 
+winter2 <- HoltWinters(training.ts, alpha = 0.2, beta = 0.1, gamma = 0.3, seasonal = "multiplicative")
+winter2
+winter2$fitted
+xhat2 <- winter2$fitted[,2]
+xhat2
+
+winter2.opt <- HoltWinters(training.ts, alpha= NULL,  beta = NULL, gamma = NULL, seasonal = "multiplicative")
+winter2.opt
+winter2.opt$fitted
+xhat2.opt <- winter2.opt$fitted[,2]
+xhat2.opt
+```
+
+# Peramalan
+```{r}
+# Forecast
+forecast2 <- predict(winter2, n.ahead = 24)
+forecast2
+forecast2.opt <- predict(winter2.opt, n.ahead = 24)
+forecast2.opt
+```
+
+# Plot Deret Waktu
+```{r}
+plot(training.ts, main = "Winter 0.2; 0.1; 0.1", type = "l", col = "black",
+     xlim = c(1, 25), pch = 12)
+lines(xhat2, type = "l", col = "red")
+lines(xhat2.opt, type = "l", col = "blue")
+lines(forecast2, type = "l", col = "red")
+lines(forecast2.opt, type = "l", col = "blue")
+legend("topleft", c("Actual Data", expression(paste(Winter2)),
+                   expression(paste(Winter2.opt))), cex = 0.5,
+       col = c("black", "red", "blue"),lty = 1)
+```
+
+# Akurasi Data Latih
+```{r}
+# Akurasi Data Training
+SSE2 <- winter2$SSE
+SSE2
+MSE2 <- winter2$SSE/length(training.ts)
+MSE2
+RMSE2 <- sqrt(MSE2)
+RMSE2
+akurasi1 <- matrix(c(SSE2, MSE2, RMSE2))
+akurasi1
+row.names(akurasi1) <- c("SSE2", "MSE2", "RMSE2")
+row.names(akurasi1)
+colnames(akurasi1) <- c("Akurasi lambda = 0.2")
+colnames(akurasi1)
+akurasi1
+
+SSE2.opt <- winter2.opt$SSE
+SSE2.opt
+MSE2.opt <- winter2.opt$SSE/length(training.ts)
+MSE2.opt
+RMSE2.opt <- sqrt(MSE2.opt)
+RMSE2.opt
+akurasi1.opt <- matrix(c(SSE2.opt, MSE2.opt, RMSE2.opt))
+akurasi1.opt
+row.names(akurasi1.opt) <- c("SSE2.opt", "MSE2.opt", "RMSE2.opt")
+row.names(akurasi1.opt)
+colnames(akurasi1.opt) <- c("Akurasi")
+colnames(akurasi1.opt)
+akurasi1.opt
+
+akurasi2.train = data.frame(Model_Winter = c("Winter 1", "winter2 optimal"),
+                            Nilai_SSE = c(SSE2, SSE2.opt),
+                            Nilai_MSE = c(MSE2, MSE2.opt), Nilai_RMSE = c(RMSE2, RMSE2.opt))
+akurasi2.train
+```
+
+# Akurasi Data Uji
+```{r}
+# Akurasi Data Testing
+forecast2 <- data.frame(forecast2)
+forecast2
+testing.ts <- data.frame(testing.ts)
+testing.ts
+selisih2 <- forecast2-testing.ts
+selisih2
+SSEtesting2 <- sum(selisih2^2)
+SSEtesting2
+MSEtesting2 <- SSEtesting2/length(testing.ts)
+MSEtesting2
+forecast2.opt <- data.frame(forecast2.opt)
+forecast2.opt
+selisih2.opt <- forecast2.opt-testing.ts
+selisih2.opt
+SSEtesting2.opt <- sum(selisih2.opt^2)
+SSEtesting2.opt
+MSEtesting2.opt <- SSEtesting2.opt/length(testing.ts)
+MSEtesting2.opt
+```
